Fix text alignment in intro section

--- a/app/assets/stylesheets/introduction/intro_sections.css.scss
+++ b/app/assets/stylesheets/introduction/intro_sections.css.scss
@@ -164,6 +164,7 @@ ul.feature-list {
     &.intro-section-home {
       position: relative;
       z-index: 0;
+      text-align: inherit;
     }
 
     &.intro-section-home {
@@ -173,6 +174,7 @@ ul.feature-list {
           border: 0 none;
         }
       }
+
       .background-slider {
         position: absolute;
         height: 100%;
@@ -226,6 +228,7 @@ ul.feature-list {
 
     div.home-text-section {
       position: relative;
+      text-align: inherit;
     }
 
     div.home-text-section {
